--- a/proyecto/css/estilo.css
+++ b/proyecto/css/estilo.css
@@ -1,10 +1,49 @@
 @font-face {
-   font-family: roboto;
-   src: url(../../archivos_generales/fuentes/Roboto-Regular.ttf) format('truetype');
- }
+    font-family: roboto;
+    src: url(../../archivos_generales/fuentes/Roboto-Regular.ttf) format('truetype');
+}
 
-*{
-	margin: 0;
-	padding: 0;
-	font-family: roboto;
+* {
+    margin: 0;
+    padding: 0;
+    font-family: roboto;
+}
+body{
+    width: 80%;
+    margin: auto;
+    background-color: #eceff1;
+}
+/*Header*/
+#header{
+    background-color: #a5d6a7;
+}
+#stlogo{
+    width: 8%;
+    margin: auto;
+}
+
+
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+header li {
+    float: left;
+}
+
+header li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+header li a:hover {
+    background-color: #111;
 }
