--- a/proyecto/css/estilo.css
+++ b/proyecto/css/estilo.css
@@ -8,42 +8,49 @@
     padding: 0;
     font-family: roboto;
 }
-body{
+
+body {
     width: 80%;
     margin: auto;
-    background-color: #eceff1;
 }
+
+
 /*Header*/
-#header{
+
+#header {
     background-color: #a5d6a7;
 }
-#stlogo{
+
+#stlogo {
     width: 8%;
     margin: auto;
 }
 
-
-header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+#header2 {
     background-color: #333;
+    height: 35px;
 }
 
-header li {
-    float: left;
+#formularios {
+    background-color: #eceff1;
+}
+#registro{
+    padding-left: 30%;
 }
 
-header li a {
-    display: block;
-    color: white;
-    text-align: center;
+#frmregistro input {
+    width: 25%;
     padding: 14px 16px;
-    text-decoration: none;
+    border-radius: 5px;
+    border: 1px solid white;
+    margin-top: 25px;
+    text-align: center;
+    font-size: 16pt;
 }
 
-/* Change the link color to #111 (black) on hover */
-header li a:hover {
-    background-color: #111;
+#frmregistro select {
+    width: 15%;
+    margin-top: 25px;
+    padding: 14px 16px;
+    font-family: roboto;
 }
