--- a/archivos_generales/css/estilo.css
+++ b/archivos_generales/css/estilo.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
 }
 /* Inicio datos vista */
+body{
+    font-family: 'Roboto',sans-serif;
+}
 .btnMenu{
     display: none;
     padding: 20px;
@@ -25,7 +28,7 @@
     width:20%;
     min-width: 300px;
     display: inline-block;
-    font-family: sans-serif;
+    
     background:#eeeeee ;
     position:fixed;
     overflow:auto;
