--- a/archivos_generales/css/estilosGenerales.css
+++ b/archivos_generales/css/estilosGenerales.css
@@ -5,7 +5,32 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+.row::after {
+    content: "";
+    clear: both;
+    display: table;
+}
+[class*="col-"] {
+    float: left;
+    padding: 15px;
+}
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
 /* Barra Superior */
+.tabla{
+    position: relative;
+}
 .bar-Men{
     position: fixed;
     width: 100%;
@@ -31,9 +56,10 @@
     font-size: 30px;    
 }
 
-
-
-
+body{
+    font-family: 'Roboto',sans-serif;
+}
+a{text-decoration: none}
 .horizontal-menu {
     position: absolute;
     right: 0%;
@@ -55,7 +81,7 @@
    background: #1a237e;
    color: #fff;
 }
-li a{
+.horizontal-menu li a{
    
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -66,7 +92,52 @@ li a{
     height: 100%;
     padding: 20px;
 }
+.botonBar{
+    display: none;
+}
+.botonBar > a{
+    position: absolute;
+    right: 0%;
+    padding: 10px;
+    margin: auto;
+    color: #fff;
+    font-family: 'Roboto',sans-serif;
+    font-size: 30px;
+}
+.menuLateral{
+    position: relative;
+    height: 100%;
+    top:10%;
+    width: 50%;
+    background: #e8eaf6 ;
+    display: none;   
+}
+.menuLateral .bloque{
+    width: 100%;
+}
+.menuLateral .bloque li a{
+    color: black;
+    display: block;
+    padding: 15px 20px;
+}
 
-@media screen and (max-width : 450px) {
+.menuLateral .bloque li a:hover{
+    -moz-transition-delay: 0.1s;
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+    background: #d1c4e9 ;
+    color: rgb(226, 27, 27);
+}
+@media screen and (max-width: 450px){
     
+    .mostrar{
+        display: none;
+    }
+    .botonBar{
+        display: block;
+    }
+    .menuLateral{
+        position: fixed;
+        display: inline;
+    }
 }
