--- a/proyecto/css/estilo.css
+++ b/proyecto/css/estilo.css
@@ -7,10 +7,11 @@
     margin: 0;
     padding: 0;
     font-family: roboto;
+    box-sizing: content-box;
 }
 
 body {
-    width: 80%;
+   
     margin: auto;
 }
 
@@ -31,26 +32,35 @@ body {
     height: 35px;
 }
 
-#formularios {
-    background-color: #eceff1;
-}
-#registro{
-    padding-left: 30%;
-}
 
-#frmregistro input {
+
+.cont{
     width: 25%;
-    padding: 14px 16px;
-    border-radius: 5px;
-    border: 0.5px solid white;
-    margin-top: 25px;
-    text-align: center;
-    font-size: 16pt;    
+    position: relative;
+    top: 30px;
 }
 
-#frmregistro select {
-    width: 15%;
-    margin-top: 25px;
-    padding: 14px 16px;
-    font-family: roboto;
+.cont > label{
+    position: absolute;
+    left: 5%;
+    transition: all .3s ease;
+}
+
+.cont > label.active.stay{
+    margin-top: -16px;
+    font-size: 11px;
+    color: #2980b9;
+}
+
+.txt{
+    width: 100%;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #ecf0f1;
+    margin-left: 5%;
+    transition: all .3s ease;
+}
+
+.cont > label.active + input{
+    border-color: #2980b9;
 }
