--- a/archivos_generales/css/estilo.css
+++ b/archivos_generales/css/estilo.css
@@ -10,8 +10,9 @@ body{
     font-family: 'Roboto',sans-serif;
     padding: 0;
     margin: 0;
-    
+    height: 100%;    
 }
+
 .btnMenu{
     top:    0;
   position: relative;
@@ -20,27 +21,28 @@ body{
     background: #3e50b4;
     color: #fff;
 }
+
 .bar-menu{
     font-family: sans-serif;
 }
+
 .barra-lateral{
     position: fixed;
     width: 20%;
     height: 100%;
-    background: #fafafa;
+    background: #FDFDFD;
     color: #fff;
-    border-right: 1px solid black;
-  
 }
+
 .barra-lateral .cabera-menu{
     text-align: center;
     width: 100%;
     padding: 10px;
-    background: #008975;
+    background: #f5f5f5;
 }
+
 .barra-lateral ul{
     list-style: none;
-    
 }
 
 .barra-lateral a{
@@ -50,36 +52,57 @@ body{
     padding: 10px;
 }
 
-.barra-lateral li{
-  
+.barra-lateral li a{
    transition: border 0.2s;
  }
- 
-.barra-lateral li:hover{
- 
-   border-left: 5px solid hsl(157, 72%, 31%);
-}
-.barra-lateral li a:hover{
-    background: #00bf9a;
-    color: #fff;
-   
+
+ #liD{
+     margin-left: 5%;
  }
- 
 
-/* Contenido */
+.barra-lateral li a:hover{
+   border-left: 5px solid #212121;
+}
+
+.barra-lateral li a:hover{
+    background: #fafafa;
+    color: #000;
+ }
+
+.des{
+    display: none;
+}
+
+.act{
+    display: block;
+}
+
+ /**
+  *logo
+  */
+ .logo{
+     width: 120px;
+     height: 100px;
+ }
+
+/**
+ *Contenido 
+ */
 .contenido{
-   
-
     width: 80%;
     height: 100%;
     overflow: auto;
-    position: relative;
-    padding: 30px;
+    position: fixed;
     margin-left: 20%;
     transition: all 0.3s;
-    background: #fafafa;
+    background: #FDFDFD;
     box-sizing: border-box;
-    
+    -webkit-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+}
+.contenido .info{
+    padding: 30px
 }
 
 .btn-bar{
@@ -90,19 +113,38 @@ body{
 }
 
 
+  /**
+   * Footer Styles
+   */
+  
+.footer {
+    position: relative;
+    padding: 1rem;
+    height: 180px;
+    background-color: #52009E;
+    text-align: center;
+}
+.footer h4{
+    color: #fff;
+}
+.footer ul{
+    list-style: none;
+}
+.footer a{
+    color: #fff;
+    text-decoration: none;
+}
 
 
 
 
 
-
-
-
-
-
+/**
+  * Responsive 
+  */
 
 @media screen and (max-width: 450px){
-   
+
     .bar-menu{
         margin: 0;
         width: 100%;
@@ -121,4 +163,3 @@ body{
         display: none;
     }
 }
-/* fin de vista */
