--- a/archivos_generales/css/estilo.css
+++ b/archivos_generales/css/estilo.css
@@ -101,6 +101,19 @@ body{
     -moz-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
     box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
 }
+#indexConte {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: relative;
+    padding: 30px;
+    transition: all 0.3s;
+    background: #FDFDFD;
+    box-sizing: border-box;
+    -webkit-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+}
 .contenido .info{
     padding: 30px
 }
@@ -111,17 +124,64 @@ body{
 .cont-Father{
     width: 100%;
 }
+ #indexInfo{
+    padding: 30px;
+    padding-top: 100px;
+    width:100%;
+}
+#top-menu{
+    width: 100%;
+    position: fixed;
+    background: #3e50b4;
+    height: auto;
+}
+#top-menu span{
+   position: absolute;
+   padding: 5px;
+   left: 6%;
+   color: #fff;
+   font-size: 25px;
 
+}
+
+.bloque{
+    position: relative;
+    display: inline-flex;
+    left: 60%;
+}
+.bloque li{
+    width: 100%;
+   
+}
+.bloque li a{
+    display: block;
+    color: #fff;
+    height: 100%;
+    font-size: 25px;
+}
+.bloque li a:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-size: 25px;
+    transition: all .5s;
+}
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
 
   /**
    * Footer Styles
    */
   
 .footer {
-    position: relative;
+    position: absolute;
     padding: 1rem;
     height: 180px;
-    background-color: #52009E;
+    width: 100%;
+    background-color: #212121;
     text-align: center;
 }
 .footer h4{
@@ -134,6 +194,28 @@ body{
     color: #fff;
     text-decoration: none;
 }
+
+
+p{
+    text-align: justify;
+   
+}
+.p1{
+   width: 45%;
+   height: 30%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
