--- a/proyecto/css/estilo.css
+++ b/proyecto/css/estilo.css
@@ -2,43 +2,63 @@
     font-family: roboto;
     src: url(../../archivos_generales/fuentes/Roboto-Regular.ttf) format('truetype');
 }
+
 * {
     margin: 0;
     padding: 0;
     font-family: roboto;
     box-sizing: content-box;
 }
+
 body {
     margin: auto;
 }
+
 /*Header*/
+
 #header {
     background-color: #a5d6a7;
 }
+
 #stlogo {
     width: 8%;
     margin: auto;
 }
+
 #header2 {
     background-color: #333;
     height: 35px;
 }
+
+#registro {
+    width: 80%;
+    margin: auto;
+}
+
+#registro > h2 {
+    text-align: center;
+}
+
 .cont {
     width: 25%;
     position: relative;
-    top: 30px;
+    margin: auto;
 }
-.cont>label {
+
+.cont > label {
     position: absolute;
     left: 5%;
     transition: all .3s ease;
     margin-top: 30px;
 }
-.cont>label.active.stay {
+
+
+.cont > label.active.stay {
     margin-top: 10px;
     font-size: 11px;
     color: #2980b9;
 }
+
 .txt {
     width: 100%;
     outline: none;
@@ -48,8 +68,28 @@ body {
     transition: all .3s ease;
     margin-top: 30px;
 }
-.cont>label.active+input {
+
+input[name="a_nacimiento"] {
+    width: 40%;
+    outline: none;
+    border: none;
+    border-bottom: 2px solid #ecf0f1;
+    margin-left: 5%;
+    transition: all .3s ease;
+    margin-top: 30px;
+}
+
+.cont > label.active + input {
     border-color: #2980b9;
 }
 
+select {
+    width: 40%;
+    position: relative;
+    left: 5%;
 
+    border: 1px solid #2980b9;
+    padding: 10px;
+    color: #4b4b4b;
+
+}
