--- a/archivos_generales/css/estilo.css
+++ b/archivos_generales/css/estilo.css
@@ -5,6 +5,7 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
 /* Inicio datos vista */
 body{
     font-family: 'Roboto',sans-serif;
@@ -101,6 +102,19 @@ body{
     -moz-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
     box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
 }
+#indexConte {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    position: relative;
+    padding: 30px;
+    transition: all 0.3s;
+    background: #FDFDFD;
+    box-sizing: border-box;
+    -webkit-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    -moz-box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+    box-shadow: -1px 0px 2px -1px rgba(0,0,0,0.45);
+}
 .contenido .info{
     padding: 30px
 }
@@ -111,17 +125,64 @@ body{
 .cont-Father{
     width: 100%;
 }
+ #indexInfo{
+    padding: 30px;
+    padding-top: 100px;
+    width:100%;
+}
+#top-menu{
+    width: 100%;
+    position: fixed;
+    background: #3e50b4;
+    height: auto;
+}
+#top-menu span{
+   position: absolute;
+   padding: 5px;
+   left: 6%;
+   color: #fff;
+   font-size: 25px;
 
+}
+
+.bloque{
+    position: relative;
+    display: inline-flex;
+    left: 60%;
+}
+.bloque li{
+    width: 100%;
+   
+}
+.bloque li a{
+    display: block;
+    color: #fff;
+    height: 100%;
+    font-size: 25px;
+}
+.bloque li a:hover{
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-size: 25px;
+    transition: all .5s;
+}
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
 
   /**
    * Footer Styles
    */
   
 .footer {
-    position: relative;
+    position: absolute;
     padding: 1rem;
     height: 180px;
-    background-color: #52009E;
+    width: 100%;
+    background-color: #212121;
     text-align: center;
 }
 .footer h4{
@@ -134,6 +195,135 @@ body{
     color: #fff;
     text-decoration: none;
 }
+
+
+p{
+    text-align: justify;
+   
+}
+.p1{
+   width: 45%;
+   height: 30%;
+}
+
+
+
+
+
+.tabla{
+    position: relative;
+}
+.bar-Men{
+    position: fixed;
+    width: 100%;
+    background-color: #303f9f;
+    -webkit-box-shadow: 6px 3px 5px -3px rgba(0,0,0,0.75);
+    -moz-box-shadow: 6px 3px 5px -3px rgba(0,0,0,0.75);
+    box-shadow: 6px 3px 5px -3px rgba(248, 59, 59, 0.45);
+    height: 10%;
+    display: inline-block;
+    overflow: hidden;
+    min-height: 15px;
+}
+.btnMenuBar{
+    position: absolute;
+    left: 0%;
+    padding: 15px;
+    margin: auto;
+
+    color: #fff;
+    height: 100%;
+    font-family: 'Roboto', sans-serif;
+    display: inline-block;
+    font-size: 30px;    
+}
+
+body{
+    font-family: 'Roboto',sans-serif;
+}
+a{text-decoration: none}
+.horizontal-menu {
+    position: absolute;
+    right: 0%;
+    
+}
+.bar-Men .horizontal-menu{
+    height: 100%;
+}
+.horizontal-menu ul{
+    height: 100%;
+}
+.horizontal-menu  ul>li{
+    height: 100%;
+    display: inline-block;
+    list-style: none;
+    
+}
+.horizontal-menu  ul>li:hover{
+   background: #1a237e;
+   color: #fff;
+}
+.horizontal-menu li a{
+   
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    list-style: none;
+    color: #fff;
+    text-decoration: none;
+    display: block;
+    height: 100%;
+    padding: 20px;
+}
+.botonBar{
+    display: none;
+}
+.botonBar > a{
+    position: absolute;
+    right: 0%;
+    padding: 10px;
+    margin: auto;
+    color: #fff;
+    font-family: 'Roboto',sans-serif;
+    font-size: 30px;
+}
+.menuLateral{
+    position: relative;
+    height: 100%;
+    top:10%;
+    width: 50%;
+    background: #e8eaf6 ;
+    display: none;   
+}
+.menuLateral .bloque{
+    width: 100%;
+}
+.menuLateral .bloque li a{
+    color: black;
+    display: block;
+    padding: 15px 20px;
+}
+
+.menuLateral .bloque li a:hover{
+    -moz-transition-delay: 0.1s;
+    -webkit-transition-delay: 0.1s;
+    transition-delay: 0.1s;
+    background: #d1c4e9 ;
+    color: rgb(226, 27, 27);
+}
+@media screen and (max-width: 450px){
+    
+    .mostrar{
+        display: none;
+    }
+    .botonBar{
+        display: block;
+    }
+    .menuLateral{
+        position: fixed;
+        display: inline;
+    }
+}
+
 
 
 
