--- a/proyecto/css/estiloRegistro.css
+++ b/proyecto/css/estiloRegistro.css
@@ -6,8 +6,8 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: roboto;
-    box-sizing: content-box;
+    font-family: 'Roboto',sans-serif;
+    /* box-sizing: content-box; */
 }
 
 body {
