--- a/proyecto/css/estiloRegistro.css
+++ b/proyecto/css/estiloRegistro.css
@@ -6,7 +6,7 @@
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Roboto',sans-serif;
+    font-family: 'Roboto', sans-serif;
     /* box-sizing: content-box; */
 }
 
@@ -35,7 +35,8 @@ body {
     margin: auto;
 }
 
-#registro > h2 {
+#registro > h2,
+#login > h2 {
     text-align: center;
 }
 
@@ -92,4 +93,12 @@ select {
     padding: 10px;
     color: #4b4b4b;
 
+}
+
+@media screen and (max-width: 500px){
+    .cont{
+        width: 60%;
+        font-size: 10pt;
+    }
+    
 }
