--- a/archivos_generales/css/estilo.css
+++ b/archivos_generales/css/estilo.css
@@ -228,7 +228,7 @@ p {
     position: fixed;
     width: 100%;
     background-color: #66bb6a;
-    height: 10%;
+    z-index: 5;
 }
 
 #btnIndex {
@@ -252,40 +252,30 @@ a {
     text-decoration: none
 }
 
-.horizontal-menu {
-    position: absolute;
-    right: 0%;
-
-}
-
-.bar-Men .horizontal-menu {
-    height: 100%;
-}
-
-.horizontal-menu ul {
-    height: 100%;
-}
-
 .horizontal-menu ul > li {
+    float: right;
     height: 100%;
     display: inline-block;
     list-style: none;
 
+
 }
 
-.horizontal-menu ul > li:hover {
+.horizontal-menu ul > li:hover,
+#btnIndex:hover {
     background: #4caf50;
     color: #fff;
 }
 
-.horizontal-menu li a {
+.horizontal-menu li a,
+#btnIndex {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     list-style: none;
     color: #fff;
     text-decoration: none;
     display: block;
-    padding: 20px;
+    padding: 30px;
 }
 
 .botonBar {
